Add more documentation for input data for 3-phase proof-of-concept elements.
Generated April 10, 2024 on eagle.

from latest local ci-testing branch

Python 3.11.7
Sphinx-7.2.6
sphinx-rtd-theme-2.0.0
link-short-name-match-modname branch as of 4/1/24 of sphinx-contrib/matlabdomain (https://github.com/sphinx-contrib/matlabdomain)

--- a/ref-manual/classes/mp/dme_line3p.html
+++ b/ref-manual/classes/mp/dme_line3p.html
@@ -162,7 +162,7 @@
 </tr>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">len</span></code></p></td>
 <td><p><em>double</em></p></td>
-<td><p>line length <em>(?)</em></p></td>
+<td><p>line length <em>(miles)</em></p></td>
 </tr>
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">pl1_fr</span></code></p></td>
 <td><p><em>double</em></p></td>
@@ -234,17 +234,17 @@ table with the following columns:</p>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">r</span></code></p></td>
 <td><p><em>double</em></p></td>
 <td><p>6 resistence parameters for forming symmetric 3x3
-series impedance matrix</p></td>
+series impedance matrix <em>(p.u. per mile)</em></p></td>
 </tr>
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">x</span></code></p></td>
 <td><p><em>double</em></p></td>
 <td><p>6 reactance parameters for forming symmetric 3x3
-series impedance matrix</p></td>
+series impedance matrix <em>(p.u. per mile)</em></p></td>
 </tr>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">c</span></code></p></td>
 <td><p><em>double</em></p></td>
 <td><p>6 susceptance parameters for forming symmetric 3x3
-shunt susceptance matrix</p></td>
+shunt susceptance matrix <em>(nF per mile)</em></p></td>
 </tr>
 </tbody>
 </table>
