--- a/ref-manual/legacy/functions/opf_legacy_user_cost_fcn.html
+++ b/ref-manual/legacy/functions/opf_legacy_user_cost_fcn.html
@@ -147,7 +147,7 @@
 <span class="n">Inputs</span><span class="p">:</span>
   <span class="n">X</span> <span class="p">:</span> <span class="nb">cell</span> <span class="n">array</span> <span class="n">with</span> <span class="n">vectors</span> <span class="n">of</span> <span class="n">optimization</span> <span class="n">variables</span>
   <span class="n">CP</span> <span class="p">:</span> <span class="n">legacy</span> <span class="n">user</span><span class="o">-</span><span class="n">defined</span> <span class="n">cost</span> <span class="n">parameter</span> <span class="nb">struct</span> <span class="n">such</span> <span class="n">as</span> <span class="n">returned</span> <span class="n">by</span>
-       <span class="p">@</span><span class="n">OPT_MODEL</span><span class="o">/</span><span class="n">GET_COST_PARAMS</span>
+       <span class="n">OPT_MODEL</span><span class="p">.</span><span class="n">GET_COST_PARAMS</span>
 
 <span class="n">Outputs</span><span class="p">:</span>
   <span class="n">F</span>  <span class="p">:</span> <span class="nb">sum</span> <span class="n">of</span> <span class="n">generator</span> <span class="n">polynomial</span> <span class="n">costs</span>
