Add new dev build.

--- a/dev/mpom/functions/cplex_options.html
+++ b/dev/mpom/functions/cplex_options.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="glpk_options" href="glpk_options.html" />
-    <link rel="prev" title="nested_struct_copy" href="nested_struct_copy.html" /> 
+    <link rel="prev" title="artelys_knitro_options" href="artelys_knitro_options.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -123,7 +123,7 @@
             <a href="../../_sources/mpom/functions/cplex_options.rst.txt" rel="nofollow"> View page source</a>
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
-        <a href="nested_struct_copy.html" class="btn btn-neutral float-left" title="nested_struct_copy" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="artelys_knitro_options.html" class="btn btn-neutral float-left" title="artelys_knitro_options" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="glpk_options.html" class="btn btn-neutral float-right" title="glpk_options" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
@@ -213,7 +213,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="nested_struct_copy.html" class="btn btn-neutral float-left" title="nested_struct_copy" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="artelys_knitro_options.html" class="btn btn-neutral float-left" title="artelys_knitro_options" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="glpk_options.html" class="btn btn-neutral float-right" title="glpk_options" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
