--- a/dev/mpom/functions/gurobiver.html
+++ b/dev/mpom/functions/gurobiver.html
@@ -23,7 +23,7 @@
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="mpomver" href="mpomver.html" />
+    <link rel="next" title="knitrover" href="knitrover.html" />
     <link rel="prev" title="mpopt2qpopt" href="mpopt2qpopt.html" /> 
 </head>
 
@@ -124,7 +124,7 @@
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
         <a href="mpopt2qpopt.html" class="btn btn-neutral float-left" title="mpopt2qpopt" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="mpomver.html" class="btn btn-neutral float-right" title="mpomver" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="knitrover.html" class="btn btn-neutral float-right" title="knitrover" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
 </div>
@@ -159,7 +159,7 @@ release date of the current installation of GUROBI.</p>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="mpopt2qpopt.html" class="btn btn-neutral float-left" title="mpopt2qpopt" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="mpomver.html" class="btn btn-neutral float-right" title="mpomver" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="knitrover.html" class="btn btn-neutral float-right" title="knitrover" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
