--- a/dev/mpom/functions/miqps_master.html
+++ b/dev/mpom/functions/miqps_master.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="nleqs_master" href="nleqs_master.html" />
-    <link rel="prev" title="mp_idx_manager" href="../classes/mp_idx_manager.html" /> 
+    <link rel="prev" title="mp.sm_quad_cost" href="../classes/mp/sm_quad_cost.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -123,7 +123,7 @@
             <a href="../../_sources/mpom/functions/miqps_master.rst.txt" rel="nofollow"> View page source</a>
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
-        <a href="../classes/mp_idx_manager.html" class="btn btn-neutral float-left" title="mp_idx_manager" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../classes/mp/sm_quad_cost.html" class="btn btn-neutral float-left" title="mp.sm_quad_cost" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="nleqs_master.html" class="btn btn-neutral float-right" title="nleqs_master" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
@@ -262,7 +262,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="../classes/mp_idx_manager.html" class="btn btn-neutral float-left" title="mp_idx_manager" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="../classes/mp/sm_quad_cost.html" class="btn btn-neutral float-left" title="mp.sm_quad_cost" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="nleqs_master.html" class="btn btn-neutral float-right" title="nleqs_master" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
