--- a/dev/mpom/functions/nested_struct_copy.html
+++ b/dev/mpom/functions/nested_struct_copy.html
@@ -23,7 +23,7 @@
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="cplex_options" href="cplex_options.html" />
+    <link rel="next" title="artelys_knitro_options" href="artelys_knitro_options.html" />
     <link rel="prev" title="convert_lin_constraint" href="convert_lin_constraint.html" /> 
 </head>
 
@@ -124,7 +124,7 @@
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
         <a href="convert_lin_constraint.html" class="btn btn-neutral float-left" title="convert_lin_constraint" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="cplex_options.html" class="btn btn-neutral float-right" title="cplex_options" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="artelys_knitro_options.html" class="btn btn-neutral float-right" title="artelys_knitro_options" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
 </div>
@@ -226,7 +226,7 @@ an invalid field so that :func:`mpoption` can refer to it as option foo.</em></p
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="convert_lin_constraint.html" class="btn btn-neutral float-left" title="convert_lin_constraint" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="cplex_options.html" class="btn btn-neutral float-right" title="cplex_options" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="artelys_knitro_options.html" class="btn btn-neutral float-right" title="artelys_knitro_options" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
