--- a/dev/mpom/functions/qps_master.html
+++ b/dev/mpom/functions/qps_master.html
@@ -193,6 +193,7 @@
         <span class="n">cplex_opt</span>   <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">CPLEX</span>
         <span class="n">glpk_opt</span>    <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">GLPK</span>
         <span class="n">grb_opt</span>     <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">GUROBI</span>
+        <span class="n">knitro_opt</span>  <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">KNITRO</span>
         <span class="n">ipopt_opt</span>   <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">IPOPT</span>
         <span class="n">linprog_opt</span> <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">LINPROG</span>
         <span class="n">mips_opt</span>    <span class="o">-</span> <span class="n">options</span> <span class="nb">struct</span> <span class="k">for</span> <span class="n">QPS_MIPS</span>
