--- a/dev/mpom/functions/qps_mosek.html
+++ b/dev/mpom/functions/qps_mosek.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="qps_osqp" href="qps_osqp.html" />
-    <link rel="prev" title="qps_ipopt" href="qps_ipopt.html" /> 
+    <link rel="prev" title="qps_knitro" href="qps_knitro.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -123,7 +123,7 @@
             <a href="../../_sources/mpom/functions/qps_mosek.rst.txt" rel="nofollow"> View page source</a>
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
-        <a href="qps_ipopt.html" class="btn btn-neutral float-left" title="qps_ipopt" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="qps_knitro.html" class="btn btn-neutral float-left" title="qps_knitro" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="qps_osqp.html" class="btn btn-neutral float-right" title="qps_osqp" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
@@ -240,7 +240,7 @@
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="qps_ipopt.html" class="btn btn-neutral float-left" title="qps_ipopt" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="qps_knitro.html" class="btn btn-neutral float-left" title="qps_knitro" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="qps_osqp.html" class="btn btn-neutral float-right" title="qps_osqp" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
