--- a/dev/ref-manual/classes/mp/dme_bus3p.html
+++ b/dev/ref-manual/classes/mp/dme_bus3p.html
@@ -167,7 +167,7 @@
 </tr>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">base_kv</span></code></p></td>
 <td><p><em>double</em></p></td>
-<td><p>base voltage <em>(kV)</em></p></td>
+<td><p>base line-to-line voltage <em>(kV)</em></p></td>
 </tr>
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">vm1</span></code></p></td>
 <td><p><em>double</em></p></td>
