--- a/dev/ref-manual/classes/mp/extension.html
+++ b/dev/ref-manual/classes/mp/extension.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../../../genindex.html" />
     <link rel="search" title="Search" href="../../../search.html" />
     <link rel="next" title="mp.xt_reserves" href="xt_reserves.html" />
-    <link rel="prev" title="mp.NODE_TYPE" href="NODE_TYPE.html" /> 
+    <link rel="prev" title="mp.sm_legacy_cost" href="sm_legacy_cost.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -133,7 +133,7 @@
             <a href="../../../_sources/ref-manual/classes/mp/extension.rst.txt" rel="nofollow"> View page source</a>
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
-        <a href="NODE_TYPE.html" class="btn btn-neutral float-left" title="mp.NODE_TYPE" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="sm_legacy_cost.html" class="btn btn-neutral float-left" title="mp.sm_legacy_cost" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="xt_reserves.html" class="btn btn-neutral float-right" title="mp.xt_reserves" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
@@ -397,7 +397,7 @@ AC PF, CPF, and OPF</p></li>
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="NODE_TYPE.html" class="btn btn-neutral float-left" title="mp.NODE_TYPE" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="sm_legacy_cost.html" class="btn btn-neutral float-left" title="mp.sm_legacy_cost" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="xt_reserves.html" class="btn btn-neutral float-right" title="mp.xt_reserves" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
