--- a/dev/ref-manual/classes/mp/task_pf_legacy.html
+++ b/dev/ref-manual/classes/mp/task_pf_legacy.html
@@ -171,7 +171,8 @@ pre-processing some input data and exporting and packaging result data.</p>
 <dt class="field-odd">Inputs<span class="colon">:</span></dt>
 <dd class="field-odd"><ul class="simple">
 <li><p><strong>d</strong> – data source specification, currently assumed to be a
-<span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> case name or case struct (<code class="docutils literal notranslate"><span class="pre">mpc</span></code>)</p></li>
+<span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> case name or case struct (<code class="docutils literal notranslate"><span class="pre">mpc</span></code>), <strong>or</strong>
+data model object</p></li>
 <li><p><strong>mpopt</strong> (<em>struct</em>) – <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p></li>
 </ul>
 </dd>
