--- a/dev/ref-manual/functions/run_cpf.html
+++ b/dev/ref-manual/functions/run_cpf.html
@@ -158,7 +158,7 @@ with the first argument set to <code class="docutils literal notranslate"><span 
 <li><p><strong>d</strong> – data source specification, currently assumed to be a cell array
 of two <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> case names or case structs (<code class="docutils literal notranslate"><span class="pre">mpc</span></code>), the first
 being the base case, the second the target case</p></li>
-<li><p><strong>mpopt</strong> (<em>struct</em>) – <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
+<li><p><strong>mpopt</strong> (<em>struct</em>) – <em>(optional)</em> <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
 <p>Additional optional inputs can be provided as <em>&lt;name&gt;, &lt;val&gt;</em> pairs,
 with the following options:</p>
 <ul class="simple">
