--- a/dev/ref-manual/functions/run_opf.html
+++ b/dev/ref-manual/functions/run_opf.html
@@ -23,7 +23,7 @@
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="mp_table_class" href="mp_table_class.html" />
+    <link rel="next" title="mp.load_dm" href="mp/load_dm.html" />
     <link rel="prev" title="run_cpf" href="run_cpf.html" /> 
 </head>
 
@@ -129,7 +129,7 @@
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
         <a href="run_cpf.html" class="btn btn-neutral float-left" title="run_cpf" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="mp_table_class.html" class="btn btn-neutral float-right" title="mp_table_class" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="mp/load_dm.html" class="btn btn-neutral float-right" title="mp.load_dm" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
 </div>
@@ -157,7 +157,7 @@ with the first argument set to <code class="docutils literal notranslate"><span 
 <dd class="field-odd"><ul>
 <li><p><strong>d</strong> – data source specification, currently assumed to be a <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span>
 case name or case struct (<code class="docutils literal notranslate"><span class="pre">mpc</span></code>)</p></li>
-<li><p><strong>mpopt</strong> (<em>struct</em>) – <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
+<li><p><strong>mpopt</strong> (<em>struct</em>) – <em>(optional)</em> <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
 <p>Additional optional inputs can be provided as <em>&lt;name&gt;, &lt;val&gt;</em> pairs,
 with the following options:</p>
 <ul class="simple">
@@ -191,7 +191,7 @@ contained in the returned task object. For example:</p>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="run_cpf.html" class="btn btn-neutral float-left" title="run_cpf" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="mp_table_class.html" class="btn btn-neutral float-right" title="mp_table_class" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="mp/load_dm.html" class="btn btn-neutral float-right" title="mp.load_dm" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
