--- a/dev/ref-manual/functions/run_pf.html
+++ b/dev/ref-manual/functions/run_pf.html
@@ -157,7 +157,7 @@ with the first argument set to <code class="docutils literal notranslate"><span 
 <dd class="field-odd"><ul>
 <li><p><strong>d</strong> – data source specification, currently assumed to be a <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span>
 case name or case struct (<code class="docutils literal notranslate"><span class="pre">mpc</span></code>)</p></li>
-<li><p><strong>mpopt</strong> (<em>struct</em>) – <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
+<li><p><strong>mpopt</strong> (<em>struct</em>) – <em>(optional)</em> <span class="raw-html">M<span style="font-size:smaller">ATPOWER</span></span> options struct</p>
 <p>Additional optional inputs can be provided as <em>&lt;name&gt;, &lt;val&gt;</em> pairs,
 with the following options:</p>
 <ul class="simple">
