--- a/dev/mpom/functions/glpk_options.html
+++ b/dev/mpom/functions/glpk_options.html
@@ -188,7 +188,7 @@
 
 <span class="n">See</span> <span class="n">the</span> <span class="n">documentation</span> <span class="k">for</span> <span class="n">the</span> <span class="n">PARAM</span> <span class="n">argument</span> <span class="n">at</span>
 
-    <span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">www</span><span class="p">.</span><span class="n">gnu</span><span class="p">.</span><span class="n">org</span><span class="o">/</span><span class="n">software</span><span class="o">/</span><span class="n">octave</span><span class="o">/</span><span class="n">doc</span><span class="o">/</span><span class="n">interpreter</span><span class="o">/</span><span class="n">Linear</span><span class="o">-</span><span class="n">Programming</span><span class="p">.</span><span class="n">html</span>
+    <span class="n">https</span><span class="p">:</span><span class="o">//</span><span class="n">docs</span><span class="p">.</span><span class="n">octave</span><span class="p">.</span><span class="n">org</span><span class="o">/</span><span class="n">latest</span><span class="o">/</span><span class="n">Linear</span><span class="o">-</span><span class="n">Programming</span><span class="p">.</span><span class="n">html</span>
 
 <span class="nb">or</span> <span class="n">by</span> <span class="n">typing</span> <span class="s">&#39;help glpk&#39;</span><span class="p">.</span>
 </pre></div>
