--- a/dev/mpom/functions/mpomver.html
+++ b/dev/mpom/functions/mpomver.html
@@ -24,7 +24,7 @@
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
     <link rel="next" title="osqpver" href="osqpver.html" />
-    <link rel="prev" title="gurobiver" href="gurobiver.html" /> 
+    <link rel="prev" title="knitrover" href="knitrover.html" /> 
 </head>
 
 <body class="wy-body-for-nav"> 
@@ -123,7 +123,7 @@
             <a href="../../_sources/mpom/functions/mpomver.rst.txt" rel="nofollow"> View page source</a>
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
-        <a href="gurobiver.html" class="btn btn-neutral float-left" title="gurobiver" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="knitrover.html" class="btn btn-neutral float-left" title="knitrover" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="osqpver.html" class="btn btn-neutral float-right" title="osqpver" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
@@ -158,7 +158,7 @@ release date of the current installation of MP-Opt-Model.</p>
            </div>
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
-        <a href="gurobiver.html" class="btn btn-neutral float-left" title="gurobiver" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
+        <a href="knitrover.html" class="btn btn-neutral float-left" title="knitrover" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
         <a href="osqpver.html" class="btn btn-neutral float-right" title="osqpver" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
