--- a/dev/mpom/functions/qps_ipopt.html
+++ b/dev/mpom/functions/qps_ipopt.html
@@ -23,7 +23,7 @@
     <script src="../../_static/js/theme.js"></script>
     <link rel="index" title="Index" href="../../genindex.html" />
     <link rel="search" title="Search" href="../../search.html" />
-    <link rel="next" title="qps_mosek" href="qps_mosek.html" />
+    <link rel="next" title="qps_knitro" href="qps_knitro.html" />
     <link rel="prev" title="qps_gurobi" href="qps_gurobi.html" /> 
 </head>
 
@@ -124,7 +124,7 @@
       </li>
   </ul><div class="rst-breadcrumbs-buttons" role="navigation" aria-label="Sequential page navigation">
         <a href="qps_gurobi.html" class="btn btn-neutral float-left" title="qps_gurobi" accesskey="p"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="qps_mosek.html" class="btn btn-neutral float-right" title="qps_mosek" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="qps_knitro.html" class="btn btn-neutral float-right" title="qps_knitro" accesskey="n">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
   </div>
   <hr/>
 </div>
@@ -242,7 +242,7 @@
           </div>
           <footer><div class="rst-footer-buttons" role="navigation" aria-label="Footer">
         <a href="qps_gurobi.html" class="btn btn-neutral float-left" title="qps_gurobi" accesskey="p" rel="prev"><span class="fa fa-arrow-circle-left" aria-hidden="true"></span> Previous</a>
-        <a href="qps_mosek.html" class="btn btn-neutral float-right" title="qps_mosek" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
+        <a href="qps_knitro.html" class="btn btn-neutral float-right" title="qps_knitro" accesskey="n" rel="next">Next <span class="fa fa-arrow-circle-right" aria-hidden="true"></span></a>
     </div>
 
   <hr/>
