Update dev site with updates primarily to QCQP capabilities in MP-Opt-Model.
Generated Apr 24, 2025 on eagle.

from temporary doc-dev branch off of master (with latest subrepo updates and current MP-Opt-Model PR 5)

Python 3.11.7
Sphinx-7.2.6
sphinx-rtd-theme-2.0.0
sphinxcontrib-matlabdomain-0.22.1

--- a/dev/genindex.html
+++ b/dev/genindex.html
@@ -687,8 +687,6 @@
 </li>
       <li><a href="ref-manual/legacy/functions/case_info.html#case_info">case_info() (built-in function)</a>
 </li>
-      <li><a href="ref-manual/legacy/functions/caseformat.html#caseformat">caseformat() (built-in function)</a>
-</li>
       <li><a href="ref-manual/legacy/functions/cdf2mpc.html#cdf2mpc">cdf2mpc() (built-in function)</a>
 </li>
       <li><a href="ref-manual/legacy/functions/compare_case.html#compare_case">compare_case() (built-in function)</a>
@@ -761,10 +759,10 @@
 </li>
       <li><a href="ref-manual/legacy/functions/cpf_current_mpc.html#cpf_current_mpc">cpf_current_mpc() (built-in function)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref-manual/legacy/functions/cpf_default_callback.html#cpf_default_callback">cpf_default_callback() (built-in function)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref-manual/legacy/functions/cpf_detect_events.html#cpf_detect_events">cpf_detect_events() (built-in function)</a>
 </li>
       <li><a href="ref-manual/legacy/functions/cpf_flim_event.html#cpf_flim_event">cpf_flim_event() (built-in function)</a>
@@ -1093,10 +1091,10 @@
         <li><a href="mpom/classes/opt_model.html#opt_model.def_set_types">(opt_model method)</a>
 </li>
       </ul></li>
-      <li><a href="ref-manual/classes/mp/dmc_element.html#mp.dmc_element.default_export_data_nrows">default_export_data_nrows() (mp.dmc_element method)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="ref-manual/classes/mp/dmc_element.html#mp.dmc_element.default_export_data_nrows">default_export_data_nrows() (mp.dmc_element method)</a>
+</li>
       <li><a href="ref-manual/classes/mp/dmc_element.html#mp.dmc_element.default_export_data_table">default_export_data_table() (mp.dmc_element method)</a>
 
       <ul>
@@ -1109,8 +1107,6 @@
         <li><a href="ref-manual/classes/mp/dmce_legacy_dcline_mpc2.html#mp.dmce_legacy_dcline_mpc2.default_export_data_table">(mp.dmce_legacy_dcline_mpc2 method)</a>
 </li>
       </ul></li>
-      <li><a href="ref-manual/legacy/functions/define_constants.html#define_constants">define_constants() (built-in function)</a>
-</li>
       <li><a href="ref-manual/classes/mp/mapped_array.html#mp.mapped_array.delete_elements">delete_elements() (mp.mapped_array method)</a>
 </li>
       <li><a href="mpom/classes/mp/set_manager.html#mp.set_manager.describe_idx">describe_idx() (mp.set_manager method)</a>
@@ -3959,6 +3955,8 @@
 </li>
       <li><a href="mpom/classes/opt_model.html#opt_model.qcn">qcn (opt_model attribute)</a>
 </li>
+      <li><a href="mpom/functions/qcqp_ex1.html#qcqp_ex1">qcqp_ex1() (built-in function)</a>
+</li>
       <li><a href="mpom/functions/qcqp_nlp_consfcn.html#qcqp_nlp_consfcn">qcqp_nlp_consfcn() (built-in function)</a>
 </li>
       <li><a href="mpom/functions/qcqp_nlp_costfcn.html#qcqp_nlp_costfcn">qcqp_nlp_costfcn() (built-in function)</a>
@@ -3985,14 +3983,14 @@
         <li><a href="ref-manual/classes/mp/dme_gen3p.html#mp.dme_gen3p.qg1_start">(mp.dme_gen3p attribute)</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref-manual/classes/mp/dme_buslink.html#mp.dme_buslink.qg2_start">qg2_start (mp.dme_buslink attribute)</a>
 
       <ul>
         <li><a href="ref-manual/classes/mp/dme_gen3p.html#mp.dme_gen3p.qg2_start">(mp.dme_gen3p attribute)</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="ref-manual/classes/mp/dme_buslink.html#mp.dme_buslink.qg3_start">qg3_start (mp.dme_buslink attribute)</a>
 
       <ul>
